[tool.poetry]
name = "drexml"
version = "0.9.5"
description = "(DRExM³L) Drug REpurposing using Mechanistic Models of signal transduction and eXplainable Machine Learning\""
authors = [
    "Carlos Loucera <carlos.loucera@juntadeandalucia.es>",
    "Marina Esteban-Medina <marina.esteban@juntadeandalucia.es>",
    "María Peña-Chilet <maria.pena.chilet.ext@juntadeandalucia.es.com>"
    ]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
scikit-learn = "^1.1.1"
numpy = "<1.22"
scipy = "^1.8.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"
python-dotenv = "^0.20.0"
click = "^8"
zenodo-client = "^0.2.0"
pyarrow = "^8.0.0"
shap = {git = "https://github.com/slundberg/shap", rev = "v0.41.0"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.14.0"
pytest = "^7.1.2"
Sphinx = "^5.0.1"
sphinx-click = "^4.1.0"
sphinx-rtd-theme = "^1.0.0"
flake8 = "^4.0.1"
tox = "^3.25.0"
tox-poetry-installer = "^0.8.4"
tox-pyenv = "^1.1.0"
flake8-black = "^0.3.3"
tox-gh-actions = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
drexml = 'drexml.cli.cli:main'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ff -ra -v"
python_functions = [
    "test_*",
]
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
