[tool.poetry]
name = "drexml"
version = "0.9.10"
description = "(DRExM³L) Drug REpurposing using and eXplainable Machine Learning and Mechanistic Models of signal transduction\""
authors = [
    "Carlos Loucera <carlos.loucera@juntadeandalucia.es>",
    "Marina Esteban-Medina <marina.esteban@juntadeandalucia.es>",
    "Maria Pena-Chilet <maria.pena.chilet.ext@juntadeandalucia.es.com>"
    ]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
scikit-learn = "1.1.1"
numpy = "<1.22"
scipy = "^1.8.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"
python-dotenv = "^0.20.0"
click = "^8"
zenodo-client = "^0.2.0"
pyarrow = "^8.0.0"
shap = {git = "https://github.com/slundberg/shap", rev = "v0.41.0"}
matplotlib = "~3.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.14.0"
pytest = "^7.1.2"
Sphinx = "^5.0.1"
sphinx-click = "^4.1.0"
sphinx-rtd-theme = "^1.0.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
drexml = 'drexml.cli.cli:main'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ff -ra -v"
python_functions = [
    "test_*",
]
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
